--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "bootstrap": "^4.5.0",
     "gatsby": "^2.23.7",
     "gatsby-image": "^2.4.7",
+    "gatsby-plugin-htaccess": "^1.4.0",
     "gatsby-plugin-manifest": "^2.4.12",
     "gatsby-plugin-offline": "^3.2.11",
     "gatsby-plugin-react-helmet": "^3.3.4",
+    "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sass": "^2.3.4",
     "gatsby-plugin-sharp": "^2.6.12",
     "gatsby-source-filesystem": "^2.3.12",
     "gatsby-transformer-sharp": "^2.5.5",
+    "global": "^4.4.0",
     "nanoid": "^3.1.10",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
@@ -34,6 +37,7 @@
     "react-helmet": "^6.1.0",
     "react-reveal": "^1.2.2",
     "react-scroll": "^1.7.16",
+    "react-spring": "^8.0.27",
     "react-tilt": "^0.1.4"
   },
   "devDependencies": {
