--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-reveal": "^1.2.2",
     "react-scroll": "^1.7.16",
     "react-spring": "^8.0.27",
-    "react-tilt": "^0.1.4"
+    "react-tilt": "^0.1.4",
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
